--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "xblock-pdf",
-  "description": "Course component (Open edX XBlock) that provides an easy way to embed a PDF",
+  "version": "2.0.0",
+  "description": "Course component (Open edX XBlock) that provides an easy way to embed a PDF - Updated for Teak compatibility",
   "private": true,
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "lint": "eslint pdf/static/js/**/*.js",
+    "format": "prettier --write pdf/static/js/**/*.js",
+    "build": "grunt build"
   },
   "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-contrib-jshint": "0.11.2",
-    "grunt-flake8": "0.1.3",
-    "grunt-jscs": "2.1.0",
-    "load-grunt-tasks": "3.2.0",
-    "time-grunt": "1.2.1"
+    "grunt": "^1.6.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-uglify": "^5.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^24.0.0",
+    "load-grunt-tasks": "^5.1.0",
+    "time-grunt": "^2.0.0",
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "repository": {
     "type": "git",
@@ -20,5 +31,6 @@
   "bugs": {
     "url": "https://github.com/IONISx/xblock-pdf/issues"
   },
-  "homepage": "https://github.com/IONISx/xblock-pdf#readme"
+  "homepage": "https://github.com/IONISx/xblock-pdf#readme",
+  "license": "AGPL-3.0"
 }
