--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-flake8==2.4.0
+# Development dependencies for xblock-pdf
+flake8>=6.0.0
+black>=22.0.0
+isort>=5.10.0
+pytest>=7.0.0
+pytest-django>=4.5.0
+pytest-cov>=4.0.0
+tox>=4.0.0
+
+# Runtime dependencies (also in setup.py)
+XBlock>=2.0.0
+web-fragments>=2.0.0
+xblock-utils>=3.0.0
+Django>=4.2,<5.0
