--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,51 @@
 [tox]
-envlist = py38,py39,py310,py311,flake8
+envlist = py{311,312}-django{42,52},quality,package
 
-[testenv]
-deps = 
-    -r{toxinidir}/requirements.txt
-    pytest
-    pytest-django
-    pytest-cov
-commands = pytest {posargs}
-
-[testenv:flake8]
-deps = flake8
-commands = flake8 pdf setup.py
-
-[flake8]
+[pycodestyle]
+exclude = .git,.tox
 max-line-length = 120
-exclude = 
-    .git,
-    __pycache__,
-    .tox,
-    build,
-    dist,
-    *.egg-info
-ignore = E203, W503
+
+[pydocstyle]
+ignore = D200,D203,D212
 
 [pytest]
-DJANGO_SETTINGS_MODULE = test_settings
-python_files = tests.py test_*.py *_tests.py
+DJANGO_SETTINGS_MODULE = workbench.settings
+addopts = --cov pdf --cov-report term-missing --durations=10
+norecursedirs = .* requirements
+
+[testenv]
+allowlist_externals =
+    make
+    mkdir
+    rm
+deps =
+    django42: Django>=4.2,<4.3
+    django52: Django>=5.2,<5.3
+    -r{toxinidir}/requirements/test.txt
+setenv =
+    DJANGO_SETTINGS_MODULE = workbench.settings
+    SCREENSHOT_DIR={toxinidir}/var/logs
+    SELENIUM_DRIVER_LOG_DIR={toxinidir}/var/logs
+commands =
+    mkdir -p {toxinidir}/var/logs
+    rm -rf {toxinidir}/var/logs/*
+    pytest {posargs}
+    make validate_translations
+
+[testenv:quality]
+allowlist_externals =
+    make
+deps =
+    -r{toxinidir}/requirements/quality.txt
+commands =
+    pylint pdf
+    pycodestyle pdf
+    make selfcheck
+
+[testenv:package]
+deps =
+    build
+    twine
+commands =
+    python -m build
+    twine check dist/*
