--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{311,312}-django{42,52},quality,package
+envlist = quality,package
 
 [pycodestyle]
 exclude = .git,.tox
@@ -7,30 +7,6 @@ max-line-length = 120
 
 [pydocstyle]
 ignore = D200,D203,D212
-
-[pytest]
-DJANGO_SETTINGS_MODULE = workbench.settings
-addopts = --cov pdf --cov-report term-missing --durations=10
-norecursedirs = .* requirements
-
-[testenv]
-allowlist_externals =
-    make
-    mkdir
-    rm
-deps =
-    django42: Django>=4.2,<4.3
-    django52: Django>=5.2,<5.3
-    -r{toxinidir}/requirements/test.txt
-setenv =
-    DJANGO_SETTINGS_MODULE = workbench.settings
-    SCREENSHOT_DIR={toxinidir}/var/logs
-    SELENIUM_DRIVER_LOG_DIR={toxinidir}/var/logs
-commands =
-    mkdir -p {toxinidir}/var/logs
-    rm -rf {toxinidir}/var/logs/*
-    pytest {posargs}
-    make validate_translations
 
 [testenv:quality]
 allowlist_externals =
